Forced backend item preview links to switch to the language of the item, by including lang variable in the URL

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2767,7 +2767,7 @@ FLEXI_VALUE_MASK_VALIDATE_CONF_DESC="Parameters for both masking and validating 
 FLEXI_VALUE_VALIDATION_MASK="Value Validation Mask <br/><small>(Predefined Set)</small>"
 FLEXI_VALUE_VALIDATION_MASK_DESC="Select a validation mask from a predefined list of masks to be used during user input"
 FLEXI_VALUE_VALIDATION_CUSTOM_MASK="Custom mask"
-FLEXI_VALUE_VALIDATION_CUSTOM_MASK_DESC="Please enter a custom validation mask to be used during user input. This should be the RAW value of data-inputmask TAG parameter of the HTML input field. Please read documentation and source code of jquery.inputmask JS library before using, e.g. <br/> 'alias': 'url' <br/> 'alias': 'date' <br/> 'mask': '9', 'repeat' : '10', 'greedy': false <br/> 'mask': '99-9999999'"
+FLEXI_VALUE_VALIDATION_CUSTOM_MASK_DESC="Please enter a custom validation mask to be used during user input This should be the RAW value of data-inputmask TAG parameter of the HTML input field. Please read documentation and source code of jquery.inputmask JS library before using, e.g. <br/><br/>alias: 'numeric', <br/>regex: {...} <br/>mask:'9{1,24}', <br/>greedy: false, <br/><br/>prefix: '$ ',<br/>suffix: '', <br/>placeholder: '0', <br/><br/>autoGroup: true, <br/>groupSize: 3, <br/>groupSeparator: ',', <br/><br/>radixPoint: '.', <br/>digits: 2, <br/>digitsOptional: false, <br/>allowPlus: false, <br/>allowMinus: true, <br/><br/>clearMaskOnLostFocus: true, <br/>removeMaskOnSubmit: true, <br/>unmaskAsNumber: true <br/><br/> NOTE: use alias: 'existingalias' to inherit from an existing alias"
 
 FLEXI_NO_MASK="No Masking"
 FLEXI_CUSTOM_MASK_ENTER_BELOW="-CUSTOM- Mask (enter below)"
