Fixed form submission not triggering on-submit events (e.g. jQuery inputmask needs this to unmask decimals and to unmask currency, so that e.g. currency character is not submitted) or so that comma radix point is converted to dot for consistent DB storing of decimals

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -479,7 +479,7 @@ FLEXI_DEFAULT="Default"
 FLEXI_PER_PAGE="per page"
 
 ; Item Form
-FLEXI_FORM_IS_BEING_SUBMITTED="Form is being submitted, please wait ..."
+FLEXI_FORM_IS_BEING_SUBMITTED="Form is being submitted ..."
 FLEXI_FORM_FIELDS_DISPLAYED_TWICE="Fields: %s , are configured to be displayed more than once"
 FLEXI_FORM_PLACER_FIELDS_MISSING="These form elements are set to appear in custom position: %s, but <br/> - a placer field was not created for them or <br/> - their placer field is not assigned to current content type"
 FLEXI_DETAILS="details"
