--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2542,9 +2542,9 @@ FLEXI_FIELD_ADVANCED_FILTERABLE="Filter"
 FLEXI_FIELD_ADVANCED_FILTERABLE_DESC="Field will be <b>available as filter for limiting the displayed items</b> in search view <br/><br/> -- Field Filters are displayed as either, text search box OR drop-down select OR range text boxes OR range select drop down OR multi-toggle buttons (checkboxes) OR single-toggle buttons (radio), etc"
 ;
 FLEXI_SEARCH_INDEXES="Search Indexes"
-FLEXI_INDEX_BASIC_CONTENT_LISTS="Re-Index Basic <br/><small>(Content Lists)</small>"
-FLEXI_INDEX_ADVANCED_SEARCH_VIEW="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal'>Re-Index Advanced</a><br/><small>(Search View)</small>"
-FLEXI_INDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced&rebuildmode=quick' class='modal'>Re-Index Advanced</a><br/><small>(Search View: dirty only)</small>"
+FLEXI_REINDEX_BASIC_CONTENT_LISTS="Re-Index Basic <br/><small>(Content Lists)</small>"
+FLEXI_REINDEX_ADVANCED_SEARCH_VIEW="Re-Index Advanced <br/><small>(Search View)</small>"
+FLEXI_REINDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="Re-Index Advanced <br/><small>(Search View: dirty only)</small>"
 FLEXI_INDEX_ADVANCED_PURGE="Purge Advanced Index"
 FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal btn'>-BASIC- Search Index</a> once !!!"
 FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal btn'>-ADVANCED- Search Index</a> NOW!"
