Allowed search view (per content type setting) to create Joomla article links if Joomla article view is allowed for the item's type (closes #293)

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3316,6 +3316,10 @@ FLEXI_EXPERIMENTAL_DESC="Experimental features are only for testing, and getting
 FLEXI_REDIRECT_ARTICLE_VIEW="Joomla article view"
 FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>If redirection is disabled, then it will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view, thus e.g. article links in Joomla category view will not be redirected <br/><br/>  NOTE: (compatibility) this is by default allowed for 'article' Content <b>type</b>, but you can allow other types too"
 FLEXI_REDIRECT_TO_ITEM_VIEW="Redirect to FC item view"
+FLEXI_SEARCH_VIEW_LINKS_TYPE="Search view links"
+FLEXI_SEARCH_VIEW_LINKS_TYPE_DESC="Items of this type in search view can link to Joomla article view or to FLEXIcontent item view"
+FLEXI_USE_FCITEMS_LINKS="FC item links"
+FLEXI_USE_JARTICLE_LINKS="Joomla article links"
 
 ; v3.0 Composite voting
 FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY="Resolution and custom display"
