Fixed module titles and usage descriptions to be shown when editing a module

--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -6,6 +6,9 @@
 
 ; Note : All ini files need to be saved as UTF-8
 
+MOD_FLEXIADVSEARCH="FLEXIcontent - Search"
+MOD_FLEXIADVSEARCH_XML_DESCRIPTION="This module displays a simple search form that links to FLEXIcontent search view"
+
 ; BACKEND
 FLEXI_TEMPLATE_LAYOUT="Template Layout"
 FLEXI_CHOOSE_TMPL="Layout"
@@ -138,6 +141,8 @@ FLEXI_CACHING="Caching"
 FLEXI_CACHING_DESC="Select whether to cache the content of this module."
 FLEXI_ADD_DEFAULT_CSS="Add Default CSS"
 FLEXI_ADD_DEFAULT_CSS_DESC="Add FLEXIcontent Default CSS for this module"
+FLEXI_ADD_TOOLTIPS_JS="Add tooltips JS"
+FLEXI_ADD_TOOLTIPS_JS_DESC="Add the mootools tooltips behavior from Joomla to display the nice tooltips in frontend."
 
 ; FRONTEND
 FLEXI_ADV_MOD_SEARCH_PROMPT="Search ..."
