--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -6,6 +6,10 @@
 
 ; Note : All ini files need to be saved as UTF-8
 
+
+MOD_FLEXICONTENT="FLEXIcontent - Universal Content"
+MOD_FLEXICONTENT_XML_DESCRIPTION="Content listings and more, in a module position"
+
 ;### Not used yet - Will be remove or used.
 FLEXI_FORCE_CACHE="Force cache (experimental)"
 FLEXI_INTRO_ITEMS="Intro items"
@@ -340,8 +344,8 @@ FLEXI_MODULE_CLASS_SUFFIX="Module Class Suffix"
 FLEXI_MODULE_CLASS_SUFFIX_DESC="A suffix to be applied to the css class of the module, this allows individual module styling."
 FLEXI_ADD_DEFAULT_CSS="Add css"
 FLEXI_ADD_DEFAULT_CSS_DESC="Add the module default css file"
-FLEXI_ADD_TOOLTIPS="Add mootools tooltips"
-FLEXI_ADD_TOOLTIPS_DESC="Add the mootools tooltips behavior from Joomla to display the nice tooltips in frontend."
+FLEXI_ADD_TOOLTIPS_JS="Add tooltips JS"
+FLEXI_ADD_TOOLTIPS_JS_DESC="Add the tooltips JS behavior from Joomla to display the nice tooltips in frontend."
 FLEXI_MODULE_WIDTH="Module width"
 FLEXI_MODULE_WIDTH_DESC="Set the module width. This parameter may be useful with some templates (eg: js tabs)"
 FLEXI_MODULE_HEIGHT="Module height"
