--- a/modules/mod_flexitagcloud/languages/en-GB.mod_flexitagcloud.ini
+++ b/modules/mod_flexitagcloud/languages/en-GB.mod_flexitagcloud.ini
@@ -5,6 +5,10 @@
 ;@license http://www.gnu.org/copyleft/gpl.html GNU/GPL
 
 ; Note : All ini files need to be saved as UTF-8
+
+MOD_FLEXITAGSCLOUD="FLEXIcontent - Tags Cloud"
+MOD_FLEXITAGSCLOUD_XML_DESCRIPTION="Tags Cloud Module for FLEXIcontent"
+
 FLEXI_COUNT="Max number of tags"
 FLEXI_COUNT_DESC="The maximum number of Tags in the cloud."
 FLEXI_MIN_SIZE="Minimum Font Size"
