--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -6,6 +6,9 @@
 
 ; Note : All ini files need to be saved as UTF-8
 
+MOD_FLEXIFILTER="FLEXIcontent - Content Lists Filtering"
+MOD_FLEXIFILTER_XML_DESCRIPTION="This module displays a form that filters the item listing of category-based views (category, author, tags, etc)"
+
 ; CONFIGURATION PARAMETER GROUPS
 FLEXI_BASIC_CONFIGURATION="Basic Configuration"
 FLEXI_FILTER_TARGET_CAT="Target Category"
@@ -218,8 +221,8 @@ FLEXI_MODULE_CLASS_SUFFIX="Module Class Suffix"
 FLEXI_MODULE_CLASS_SUFFIX_DESC="A suffix to be applied to the css class of the module, this allows individual module styling."
 FLEXI_ADD_DEFAULT_CSS="Add css"
 FLEXI_ADD_DEFAULT_CSS_DESC="Add the module default css file"
-FLEXI_ADD_TOOLTIPS="Add mootools tooltips"
-FLEXI_ADD_TOOLTIPS_DESC="Add the mootools tooltips behavior from Joomla to display the nice tooltips in frontend."
+FLEXI_ADD_TOOLTIPS_JS="Add tooltips JS"
+FLEXI_ADD_TOOLTIPS_JS_DESC="Add the tooltips JS behavior from Joomla to display the nice tooltips in frontend."
 
 
 
