Improved robustness, speed and UI of search indexing, adding automatic checks for DB query limit, requiring at least 5 seconds server execution time between AJAX calls, and replacing mootools modal with jQuery modal

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2546,16 +2546,15 @@ FLEXI_REINDEX_BASIC_CONTENT_LISTS="Re-Index Basic <br/><small>(Content Lists)</s
 FLEXI_REINDEX_ADVANCED_SEARCH_VIEW="Re-Index Advanced <br/><small>(Search View)</small>"
 FLEXI_REINDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="Re-Index Advanced <br/><small>(Search View: dirty only)</small>"
 FLEXI_INDEX_ADVANCED_PURGE="Purge Advanced Index"
-FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal btn'>-BASIC- Search Index</a> once !!!"
-FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal btn'>-ADVANCED- Search Index</a> NOW!"
+FLEXI_ALERT_UPDATE_SINDEX_BASIC="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a %s >-BASIC- Search Index</a> once !!!"
+FLEXI_ALERT_UPDATE_SINDEX_ADVANCED="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the <a %s >-ADVANCED- Search Index</a> NOW!"
 ;
 FLEXI_CLICK_TO_TOGGLE="click to toggle"
 FLEXI_TOGGLE_TEXT_SEARCHABLE="Text Search"
 FLEXI_TOGGLE_FILTERABLE="Filter"
 FLEXI_TOGGLE_ADV_TEXT_SEARCHABLE="Text Search <small>(search view)</small>"
 FLEXI_TOGGLE_ADV_FILTERABLE="Filter <small>(search view)</small>"
-FLEXI_FIELD_BASIC_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=basic' class='modal'>Dirty</a> (please rebuild basic search indexed)"
-FLEXI_FIELD_ADVANCED_INDEX_PROPERTY_DIRTY="<a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&view=search&layout=indexer&tmpl=component&indexer=advanced' class='modal'>Dirty</a> (please rebuild advanced search indexed)"
+FLEXI_FIELD_DIRTY_REBUILD_SEARCH_INDEX="Rebuild Search Index"
 FLEXI_PROPERTY_NOT_SUPPORTED="Property not supported"
 FLEXI_REBUILD_SEARCH_INDEX="Rebuild Search Index"
 
