Added browser caching support, this includes different caches fpr public (unlogged user) and for multiple users logging from same browser, proxy caching disabled to avoid issues with 3rd party extensions doing per guest content, also included login/logout support to auto-reload page when back/front buttons are clicked, and browser history replacing is done. The purpose of this commit is mainly to avoid page expired message in back/front buttons, but also increase speed avoiding text search / filtering form to be-resubmitted

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -387,6 +387,7 @@ FLEXI_CLICK_TO_LIST="Click to list"
 FLEXI_CLICK_CALENDAR="Click calendar"
 FLEXI_TYPE_TO_LIST="... type to list"
 FLEXI_TYPE_TO_FILTER=" ... type to filter"
+FLEXI_UPDATING_CONTENTS="Updating contents ..."
 FLEXI_SHOW_AS_POPUP="Show as popup"
 FLEXI_SHOW_AS_INLINE="Show as inline"
 FLEXI_WORDS_IGNORED_MISSING_COMMON="Words ignored (missing or too common)"
