Added item form custom HTML prefix / suffix to text field too. Minor cleanup in cascaded JS code

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1807,9 +1807,9 @@ FLEXI_USING_CONTENT_TYPE_LAYOUT="Using Template Layout defined by <b>Content Typ
 FLEXI_RECOMMEND_CONTENT_TYPE_LAYOUT="<b>NOTE:</b><br/>All items use the <b>item layout</b> defined in the item's Content Type configuration, but you can select above, to use a different item layout for this content<br/><br/> Nevertheless, it is recommended to avoid overriding the item layout configuration for individual (content) items.<br/><br/>"
 
 ; new strings for field values enclosing texts
-FLEXI_FIELD_VALUE_PREFIX_TEXT="Prefix text of every value"
+FLEXI_FIELD_VALUE_PREFIX_TEXT="Every value prefix"
 FLEXI_FIELD_VALUE_PREFIX_TEXT_DESC="This text is placed immediately <b>before</b> every field value"
-FLEXI_FIELD_VALUE_SUFFIX_TEXT="Suffix text of every value"
+FLEXI_FIELD_VALUE_SUFFIX_TEXT="Every value suffix"
 FLEXI_FIELD_VALUE_SUFFIX_TEXT_DESC="This text is placed immediately <b>after</b> every field value"
 ; new strings for field enclosing texts
 FLEXI_FIELD_OPENING_TEXT="Opening text for Field"
