Updated phpThumb from v1.7.11 to v1.7.13

--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -193,7 +193,7 @@ FLEXI_CURRENT_USER_MY_ITEMS="Current Logged User (=My Items)"
 
 
 ;### Part 3
-FLEXI_TITLE_PARAMS="Title parameters"
+FLEXI_TITLE_PARAMS="Title"
 FLEXI_MAX_TITLE_LENGTH="Max. Title length"
 FLEXI_MAX_TITLE_LENGTH_DESC="Max. length of the title."
 FLEXI_DISPLAY_TITLE="Display title"
@@ -201,7 +201,7 @@ FLEXI_DISPLAY_TITLE_DESC="Display hide title"
 FLEXI_LINK_TITLE="Link title"
 FLEXI_LINK_TITLE_DESC="Open the item when clicking on the Title"
 
-FLEXI_TEXT_PARAMS="Description parameters"
+FLEXI_TEXT_PARAMS="Description"
 FLEXI_DISPLAY_TEXT="Display description"
 FLEXI_DISPLAY_TEXT_DESC="Display description text"
 FLEXI_STRIP_HTML_N_CUT="Strip tags and cut text"
@@ -211,7 +211,7 @@ FLEXI_SHOW_READMORE_DESC="Show/hide the readmore button"
 FLEXI_CUT_INTRO="Introtext max length"
 FLEXI_CUT_INTRO_DESC="Auto cut introtext after x characters. NOTE: The html tags of the main text will be stripped."
 
-FLEXI_IMAGE_PARAMS="Image parameters"
+FLEXI_IMAGE_PARAMS="Image"
 FLEXI_IMAGE_HEIGHT="Image height"
 FLEXI_IMAGE_WIDTH="Image width"
 FLEXI_LINK_IMAGE="Link image"
@@ -227,7 +227,7 @@ FLEXI_IMAGE_SOURCE="Image source"
 FLEXI_IMAGE_SOURCE_DESC="Select the source of the image. You can either choose an image field (if available) or automatically extract the first image found in the main text (only local files are supported)."
 FLEXI_SELECT_IMAGE_FIELD="Extract from main text"
 
-FLEXI_DATE_PARAMS="Dates parameters"
+FLEXI_DATE_PARAMS="Dates"
 FLEXI_DISPLAY_DATE="Display Date"
 FLEXI_DISPLAY_DATE_DESC="Display Date"
 FLEXI_DISPLAY_DATE_TYPE="Display Date Type"
@@ -241,13 +241,13 @@ FLEXI_CUSTOM_DATE_FORMAT_DESC="Custom date format if you select custom from abov
 FLEXI_CUSTOM_DATE_FORMAT_FEAT="Custom date format of featured"
 FLEXI_CUSTOM_DATE_FORMAT_FEAT_DESC="Custom date format of featured if you select custom from above."
 
-FLEXI_HITS_PARAMS="Hits parameters"
+FLEXI_HITS_PARAMS="Hits"
 FLEXI_DISPLAY_HITS="Display Hits"
 FLEXI_DISPLAY_HITS_DESC="Display Hits Field"
 FLEXI_HITS="Hits"
 FLEXI_HITS_L="hits"
 
-FLEXI_VOTING_PARAMS="Voting parameters"
+FLEXI_VOTING_PARAMS="Voting"
 FLEXI_DISPLAY_VOTING="Display Voting"
 FLEXI_DISPLAY_VOTING_DESC="Display Voting Field"
 FLEXI_VOTE="Vote"
@@ -265,11 +265,11 @@ FLEXI_YES_RECOMMENDED="Yes (Recommend)"
 FLEXI_VOTING_SHOW_COUNTER="Show vote counter"
 FLEXI_VOTING_SHOW_COUNTER_DESC="Display the number of votes the item has received"
 
-FLEXI_COMMENTS_PARAMS="Comments parameters"
+FLEXI_COMMENTS_PARAMS="Comments"
 FLEXI_DISPLAY_COMMENTS="Display Comments"
 FLEXI_DISPLAY_COMMENTS_DESC="Display number of item's comments"
 
-FLEXI_FIELDS_PARAMS="Fields parameters"
+FLEXI_CUSTOM_FIELDS_PARAMS="Custom Fields"
 FLEXI_DISPLAY_FIELDS="Display fields"
 FLEXI_DISPLAY_FIELDS_DESC="Select to display any extra CORE or CUSTOM Field"
 FLEXI_DISPLAY_FIELD_LABEL="Display label"
