Some minor changes for item form inline information message for fields, and cleared a PHP notice if a field has no HTML for item form

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -200,7 +200,7 @@ FLEXI_NEVER="Never"
 FLEXI_NOT_RATED_YET="Not rated yet"
 FLEXI_NOTES="Note"
 FLEXI_PARAMETERS_ADVANCED="Advanced parameters"
-FLEXI_PLEASE_PUBLISH_PLUGIN="Please publish the FLEXIcontent fields plugins"
+FLEXI_PLEASE_PUBLISH_THIS_PLUGIN="The Joomla plugin needed for this field seems to be unpublished. Please publish it"
 FLEXI_REVISED="Revised"
 FLEXI_SCORE="Score"
 FLEXI_TAKE_CARE_CHANGING_FIELD_TYPE="Please take care when changing field type. After saving all fields that are not assigned to the new content type, will have their values permanently deleted !!!"
