Added docx,pptx,xlsx to default allowed extensions

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2622,8 +2622,8 @@ FLEXI_SEARCH_FILTER_FORM_PLACEMENT="Form placement"
 FLEXI_SEARCH_FILTER_FORM_PLACEMENT_DESC="Select how the form container will be placed/opened"
 FLEXI_SEARCH_FILTER_FORM_INLINE="Inline"
 FLEXI_SEARCH_FILTER_FORM_SLIDER="Slider"
-FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE="Text of Form toggle button"
-FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE_DESC="The text of button/link for opening/displaying the search form, default is 'Search'"
+FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE="Form toggle title"
+FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE_DESC="The button/link title for toggling the search form via click, default is 'Search'"
 
 FLEXI_SEARCH_GO_BUTTON="Go Button"
 FLEXI_SEARCH_GO_BUTTON_DESC="Submit form reloading current listing, <br/><br/><b>Note</b>:<br/> that this will submit text search, field filters and alpha index (when any of these is present)"
