--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1192,6 +1192,7 @@ FLEXI_ORDER_ITEM_ID_REVERSE="ID -- Lowest First"
 FLEXI_ORDER_MOST_COMMENTED="Most Commented"
 FLEXI_ORDER_BEST_RATED="Best Rated"
 FLEXI_ORDER_CONFIGURED_ORDER="Ordering in current category"
+FLEXI_ORDER_RANDOM="Random"
 
 ; Modified 1.5.1 stable
 FLEXI_EDIT_ACL="Permissions"
