Progressed work on reviews feature

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2957,6 +2957,9 @@ FLEXI_FIELD_VOTE_PERMISSIONS_DESC="You can configure who is allowed to submit vo
 FLEXI_FIELD_VOTE_SUBMIT_ACCESS="Submit Access"
 FLEXI_FIELD_VOTE_SUBMIT_ACCESS_DESC="User Group assigned this access level will be able to vote. <br/><br/> - e.g <b>create an access level 'Content Voting'</b> and assign it to the Usergroups that you need <br/><br/><b>NOTE:</b> You only need to assign it to the parent UserGroup e.g. if you assign this Access Level to usergroup 'Registered' then ALL usergroups being children of it will have it ..."
 
+FLEXI_FIELD_VOTE_REVIEWS="Reviews"
+FLEXI_FIELD_VOTE_REVIEWS_DESC="Enable and configure reviewing of items"
+
 FLEXI_FIELD_VOTE_NO_ACCESS_MSG_SHOW="Show Message"
 FLEXI_FIELD_VOTE_NO_ACCESS_MSG_SHOW_DESC="Select when to show the no access message"
 FLEXI_FIELD_VOTE_NO_ACCESS_MSG="Message"
