More easy configuration of frontend item form layout per type, by adding parameter to load component defaults and then customize inside type configuration

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3223,6 +3223,8 @@ FLEXI_CUSTOM="Custom"
 FLEXI_CUSTOMIZE="Customize"
 FLEXI_LOAD_EXAMPLE="Load example"
 FLEXI_IGNORE="Ignore"
+FLEXI_LOAD_DEFAULTS_N_CUSTOMIZE="Load defaults & customize"
+FLEXI_USE_COMPONENT_SETTINGS_CLEAR="Use component settings (clear)"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 FLEXI_INFORMATION="Information"
