--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -250,6 +250,7 @@ FLEXI_SEARCH_INCLUDE_AREAS_TIP="Select other areas to include in your search, <b
 FLEXI_OPERATOR_DESC="<strong>Operator</strong>::This is an operator for your filtering your results.<br /><strong>OR</strong> operator requires that at least one keyword is present, meaning that each individual result contains at least one matched field.<br /><strong>AND</strong> will require that all keywords are present, meaning that each result must have all fields matched (containing the keyword)."
 FLEXI_SEARCH_MESSAGE="Search term must be a minimum of %s characters and a maximum of %s characters."
 
+FLEXI_SEARCH_NO_ITEMS_FOUND="No search results found"
 FLEXI_ALL_WORDS="All words"
 FLEXI_ANY_WORDS="Any words"
 FLEXI_EXACT_PHRASE="Exact Phrase"
