--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2689,6 +2689,7 @@ FLEXI_FIELDS_AS_FILTERS="Fields as filters"
 FLEXI_FIELDS_AS_FILTERS_DESC="Enable this to use specific fields as filters"
 
 FLEXI_ACCORDING_TO_TYPE="According to type"
+FLEXI_CONFIGURE_BELOW="Configure below"
 FLEXI_NO_CONFIGURE_BELOW="No, configure below"
 FLEXI_NO_USE_BELOW="No, use below"
 FLEXI_FILTERS_ORDER="Filter order"
@@ -2996,7 +2997,6 @@ FLEXI_FILTER_VALUES_REQUIRE_ALL="Require ALL selected values"
 FLEXI_FILTER_VALUES_REQUIRE_ALL_DESC="Usually you will include items found to have any of the selected values.<br/><br/> -- You can select to <b>require all selected</b> filter values to be matched for the found items. <br/><br/> -- <b>WARNING</b> to developers of new field types:<br/> this will not work properly if your field <u>saves SAME field value more than once</u> for the same item.<br/> So in such a case do not add this option to your field !"
 FLEXI_FILTER_VALUES_REQUIRE_ALL_TIP="Require ANY / ALL inline tip"
 FLEXI_FILTER_VALUES_REQUIRE_ALL_TIP_DESC="Select to show information if ANY or ALL selected filter values of this filter are required"
-FLEXI_ALPHANUMERIC="Alphanumeric"
 FLEXI_INTEGER="Integer"
 FLEXI_FLOAT="Float"
 FLEXI_LOADING="Loading"
