--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -503,6 +503,11 @@ FLEXI_ORDERING_METHOD="Ordering Method"
 FLEXI_ORDERING_METHOD_DESC="Select to order alphanumerically (dictionary order) or numerically e.g. in alphanumerically '1000 my-title' is before '200 my-title' "
 FLEXI_ALPHANUMERIC="Alphanumeric"
 FLEXI_NUMERIC="Numeric"
+FLEXI_INTEGER="Integer"
+FLEXI_FLOAT="Float"
+FLEXI_DATE="Date"
+FLEXI_LOADING="Loading"
+FLEXI_SAVING="Saving"
 
 FLEXI_FALLBACK_IMG="Image Field Fallback<br/><small>(when image missing)</small>"
 FLEXI_FALLBACK_IMG_DESC="When image is missing, you can select to use some image as fallback, e.g. item introtext image when image field has no value, even if image field has default value"
