--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -215,8 +215,8 @@ FLEXI_SEARCH_TEXT_SEARCH_INFO="Enter words or phrases to search in content title
 FLEXI_SEARCH_FIELD_FILTERS="Attributes Filters"
 FLEXI_SEARCH_FIELD_FILTERS_INFO="You can limit the text search results to those that match specific attributes values/ranges"
 
-FLEXI_YES_INITIALLY_DISABLED="Yes, initially disabled"
-FLEXI_YES_INITIALLY_ENABLED="Yes, initially enabled"
+FLEXI_YES_INITIALLY_CLOSED="Yes, initially closed"
+FLEXI_YES_INITIALLY_OPENED="Yes, initially opened"
 
 FLEXI_SEARCH_SEARCHWORDS="Words"
 FLEXI_SEARCH_SEARCHWORDS_TIP="Words / phrases to search <br/><b>NOTE:</b> to enter more than one phrase, select all/any words, and enter phrases inside double quotes"
