--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2777,6 +2777,8 @@ FLEXI_USE_JS_FORM_FIELD="Apply JS library"
 FLEXI_USE_JS_FORM_FIELD_DESC="Enable javascript handling/styling on the form field, to allow better appearance e.g. prettyCheckable for checkboxes and more user friendly behaviour e.g. select2 JS for drop-down selects"
 FLEXI_FORM_FIELD_CONF="Form field"
 FLEXI_FORM_FIELD_CONF_DESC="Configuration of the form field such us maximum characters"
+FLEXI_FORM_FIELD_FORM_FIELD_LAYOUT="Form Field Layout"
+FLEXI_FORM_FIELD_SELECT_LAYOUT="Select Layout"
 
 ; some string for versioning and previewing versions and item translations
 FLEXI_FRONTEND_ACTIVE_VERSION="Current Version <br/><small>(Frontend Active)</small>"
